# Threads-video-downloader

./: .gitignore  LICENSE  README.md  iconconv.py  main.py  pyproject.toml  requirements.txt
.github/workflows/: build.yaml
tvd/: core.py  gui.py
