[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "threads-video-downloader"
version = "0.1.0"
description = "Download videos from Threads posts via URL"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Ped" }]
dependencies = [
  "playwright>=1.40",
  "requests>=2.31",
  "pillow>=10.0",
]

[project.optional-dependencies]
build = [
  "pyinstaller>=6.0",
]
dev = [
  "ruff>=0.5",
]

[tool.setuptools]
# packages live in ./tvd
packages = ["tvd"]

[tool.ruff]
line-length = 100
